[gd_scene load_steps=7 format=3 uid="uid://cegbgjac217ah"]

[ext_resource type="Script" path="res://scripts/ui.gd" id="1_dw7dc"]
[ext_resource type="Theme" uid="uid://odxvlb3cuew4" path="res://assets/themes/my_theme.tres" id="2_ujas6"]
[ext_resource type="Texture2D" uid="uid://dvcg5nhbtxbns" path="res://assets/sprites/pickups/Brain-empty.png" id="3_gqbn7"]
[ext_resource type="Texture2D" uid="uid://t0f2ccbjve0n" path="res://assets/sprites/pickups/Brain.png" id="4_v8s71"]
[ext_resource type="Texture2D" uid="uid://dg6fg1ow8sltq" path="res://assets/sprites/pickups/Magnet-empty.png" id="5_hykbl"]
[ext_resource type="Texture2D" uid="uid://dc4seamla57by" path="res://assets/sprites/pickups/Magnet.png" id="5_maamd"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_dw7dc")

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = 34.0
offset_top = 36.0
offset_right = 644.0
offset_bottom = 76.0
theme = ExtResource("2_ujas6")
theme_type_variation = &"Healthbar"
value = 100.0
show_percentage = false

[node name="RoundText" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -317.0
offset_top = 22.0
offset_right = -39.0
offset_bottom = 118.0
grow_horizontal = 0
theme = ExtResource("2_ujas6")
theme_type_variation = &"MenuTitle"
text = "Round 1"

[node name="ScoreText" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -305.0
offset_top = 122.0
offset_right = -38.0
offset_bottom = 171.0
grow_horizontal = 0
theme = ExtResource("2_ujas6")
theme_type_variation = &"SubTitle"
text = "Score: "

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -382.0
offset_top = -250.0
offset_right = 18.0
offset_bottom = 25.0
grow_horizontal = 0
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 2
offset_top = 75.0
offset_right = 400.0
offset_bottom = 200.0
theme_override_constants/separation = 40
alignment = 1

[node name="BrainProgress" type="TextureProgressBar" parent="Control/HBoxContainer"]
custom_minimum_size = Vector2(125, 125)
layout_mode = 2
size_flags_horizontal = 4
rounded = true
fill_mode = 3
nine_patch_stretch = true
texture_under = ExtResource("3_gqbn7")
texture_progress = ExtResource("4_v8s71")

[node name="ResetProgress" type="ProgressBar" parent="Control/HBoxContainer"]
custom_minimum_size = Vector2(30, 125)
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("2_ujas6")
theme_type_variation = &"Resetbar"
value = 100.0
fill_mode = 3
show_percentage = false

[node name="BrainText" type="Label" parent="Control"]
layout_mode = 2
offset_left = 203.0
offset_top = 51.0
offset_right = 245.0
offset_bottom = 108.0
theme = ExtResource("2_ujas6")
theme_override_font_sizes/font_size = 40
text = "0"
horizontal_alignment = 1

[node name="MagnetProgress" type="TextureProgressBar" parent="Control"]
visible = false
layout_mode = 0
offset_left = 98.0
offset_top = 60.0
offset_right = 146.0
offset_bottom = 108.0
value = 100.0
fill_mode = 3
texture_under = ExtResource("5_hykbl")
texture_progress = ExtResource("5_maamd")
